Suspend entry fails on Ryzen 5900HX
Brief summary of the problem:
The problem arises 100% of the time when I try to suspend using s2ram
: the screen blanks for a few seconds and then wakes up with a message s2ram_do: Connection timed out
. Kernel logs show this block of errors, and only these:
[ 405.490464] amd_pmc AMDI0005:00: failed to talk to SMU
[ 405.490479] amd_pmc AMDI0005:00: failed to adjust keyboard wakeup: -110
[ 405.490481] amd_pmc AMDI0005:00: PM: dpm_run_callback(): acpi_subsys_suspend+0x0/0x70 returns -110
[ 405.490488] amd_pmc AMDI0005:00: PM: failed to suspend: error -110
This resembles a number of other issues previously reported to have been fixed in linux-5.x kernels, but is apparently different.
Hardware description:
- ASUSTeK COMPUTER INC. ZenBook UX425QA_UM425QA (ZenBook) running BIOS 5.19 (UX425QA.306) released 11/22/2022
- amd_s2idle report: amd_s2idle.py fails with
Traceback (most recent call last):
File "/home/ryan/Downloads/./amd_s2idle.py", line 1520, in <module>
test = app.prerequisites()
File "/home/ryan/Downloads/./amd_s2idle.py", line 1068, in prerequisites
i()
File "/home/ryan/Downloads/./amd_s2idle.py", line 515, in check_battery
energy_full_design = int(dev.properties["POWER_SUPPLY_ENERGY_FULL_DESIGN"])
File "/usr/lib/python3.10/site-packages/pyudev/device/_device.py", line 1100, in __getitem__
raise KeyError(prop)
KeyError: 'POWER_SUPPLY_ENERGY_FULL_DESIGN'
System information:
- Gentoo
- Kernel version: Linux chica 6.1.12-gentoo #4 (closed) SMP PREEMPT_DYNAMIC Thu Feb 16 22:49:36 PST 2023 x86_64 AMD Ryzen 9 5900HX with Radeon Graphics AuthenticAMD GNU/Linux
How to reproduce the issue:
Either with AC or battery:
- Run
s2ram
(from thesuspend
package) from any command line. - Observe the screen blank and then wake
- Observe the error message in the terminal, as described above.